# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: gendiff-action.yaml
gendiff/: __init__.py  cli.py  diff.py  parse.py  parses.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test.py  test_diff.py
